--- a/webside/css/mystyles.css
+++ b/webside/css/mystyles.css
@@ -113,13 +113,17 @@ span.download{
 }
 
 span.download:hover{
+  text-decoration: none;
    font-weight: bold;
   color: #05bca9;
+  border-bottom: none;
   /*text-decoration: underline;*/
   /*text-decoration-color:  #40E0D0;*/
 }
 
+
 h3.download{
+  text-decoration: none;
   padding-top: 50px;
    text-decoration: none;
     border-bottom: 2px solid #05bca9;
@@ -128,8 +132,10 @@ h3.download{
 }
 
 h3.download:hover{
+  text-decoration: none;
    font-weight: bold;
   color: #05bca9;
+  
   /*text-decoration: underline;*/
   /*text-decoration-color:  #40E0D0;*/
 }
