--- a/webside/css/mystyles.css
+++ b/webside/css/mystyles.css
@@ -155,3 +155,22 @@ div.centerImage{
     margin: auto;
     
 }
+
+a.makeWhite{
+  color: white;
+  text-decoration: none;
+}
+a.makeWhite:hover{
+  
+  text-decoration: none;
+}
+
+
+a.makeBlack{
+  color: white;
+  text-decoration: none;
+}
+a.makeBlack:hover{
+  
+  text-decoration: none;
+}
