--- a/webside/css/mystyles.css
+++ b/webside/css/mystyles.css
@@ -180,3 +180,22 @@ ul.add_black_color{
   color: black;
 }
 
+
+span.addGreenUnderscore{
+   text-decoration: none;
+    border-bottom: 2px solid #05bca9;
+  /*text-decoration: underline;*/
+  /*text-decoration-color:  #40E0D0;*/
+}
+
+
+
+span.addRedUnderscore{
+   text-decoration: none;
+    border-bottom: 2px solid #722f37;
+  /*text-decoration: underline;*/
+  /*text-decoration-color:  #40E0D0;*/
+}
+
+
+
